Bug 1804232 - Add webconsole to the whitelist of nested content browsers. r=smaug.

As it was done for the netmonitor in Bug 1640689, we need to add the webconsole
document to the whitelist of nested content browsers so we can show the html
preview of network request in the console.

Differential Revision: https://phabricator.services.mozilla.com/D164103